[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ws-command-gateway"
version = "0.1.0"
description = "Minimal extensible WebSocket command bus."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3.0",
    "websockets>=12.0,<16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
